2012-02-10  flip  <flip10000@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* Ld/SLimit/slimit.cpp:
	  SLimit ported.

2012-02-10  Stefan Sauer  <ensonic@users.sf.net>

	* AsDev/a4pFilter01/a4pFilter01.cpp:
	* HACKING:
	* Ld/Gate/gate.cpp:
	* Ld/SLimit/slimit.cpp:
	* Ld (added):
	* Ld/Gate (added):
	* Ld/Gate/gate.cpp (added):
	* Ld/SLimit (added):
	* Ld/SLimit/slimit.cpp (added):
	* AsDev (added):
	* AsDev/a4pFilter01 (added):
	* AsDev/a4pFilter01/a4pFilter01.cpp (added):
	  Add more sources. Update the HACKING file.

2011-08-22  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/ArpMan/ArpMan.cpp:
	  Thanks stupid clipboard for eventually pasting totaly unrelated crap
	  into the source code.

2011-08-22  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/ArpMan/ArpMan.cpp:
	  Improve the description for the ArpType parameter.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* Chimp/Makefile.am:
	* Chimp/PitchShifter/Makefile.am:
	* Chimp/PitchShifter/PitchShifter.cpp:
	* Makefile.am:
	* configure.ac:
	* Chimp (added):
	* Chimp/Makefile.am (added):
	* Chimp/PitchShifter (added):
	* Chimp/PitchShifter/Makefile.am (added):
	* Chimp/PitchShifter/PitchShifter.cpp (added):
	  Add another effect. Also fix the memset use in the plugin.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* CyanPhase/AtomStereoMeld/Makefile.am:
	* CyanPhase/AtomStereoMeld/atom.cpp:
	* CyanPhase/Makefile.am:
	* configure.ac:
	* CyanPhase/AtomStereoMeld (added):
	* CyanPhase/AtomStereoMeld/atom.cpp (added):
	* CyanPhase/AtomStereoMeld/Makefile.am (added):
	  Add another effect.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* Jeskola/Distortion/Distortion.cpp:
	* Jeskola/Distortion/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/Distortion/Makefile.am (added):
	  Port another machine.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Makefile.am:
	* FSM/ScatMan/Makefile.am:
	* FSM/ScatMan/ScatMan.cpp:
	* FSM/ScrapMan/Makefile.am:
	* FSM/ScrapMan/ScrapMan.cpp: